# REU_temp

./: README.md  dynamics.py  main v4.ipynb  main_v3.ipynb  main_v4.ipynb  main_v5.ipynb  make_graph.py  pyproject.toml  redistricter.py
.github/workflows/: bump.yml  python-publish.yml
test_drscook2/: util.py
