[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "REU_temp"
dynamic = ["version"]
description = "A Demo for my stackoverflow question"
dependencies = [
    "shutils",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "REU_temp/__version.py"
