[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "test_drscook2"
dynamic = ["version"]
description = "A Demo for my stackoverflow question"
dependencies = [
    "shutils",
]

[tool.hatch.version]
path = "test_drscook2/__about__.py"

#[tool.hatch.version]
#source = "vcs"
#[tool.hatch.build.hooks.vcs]
#version-file = "test_drscook2/__version.py"
